<resources>

    <!-- APP -->
    <string name="app_name">FlavorForge</string>

    <!-- AUTH: SIGN IN -->
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_subtitle">Hi there! Nice to see you again.</string>
    <string name="email_hint">Email:</string>
    <string name="email_input_hint">Your email address</string>
    <string name="password_hint">Password:</string>
    <string name="password_input_hint">Your password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="continue_without_login_text">Continue without login</string>
    <string name="go_to_sign_up_text">Sign Up</string>

    <!-- AUTH: SIGN UP -->
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_subtitle">Register for free to access more options.</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="have_account">Have an Account? <font color="#FF4500"><b>Sign In</b></font></string>

    <!-- TERMS -->
    <string name="terms_text">
        <font color="#D1D6DB">I agree to the </font>
        <font color="#FF4500"><b>Terms of Services and Privacy Policy.</b></font>
    </string>

    <!-- MAIN SCREEN -->
    <string name="what_we_are_cooking_text">What we are cooking today?</string>
    <string name="search_recipes_text">Search recipes</string>

    <!-- DRAWER MENU -->
    <string name="menu_title">Menu</string>
    <string name="user">User</string>
    <string name="register_for_free">Register for free to \n access more options.</string>
    <string name="menu_home_text">Home</string>
    <string name="menu_recipes_text">Recipes</string>
    <string name="menu_register_text">Register</string>
    <string name="menu_settings_text">Settings</string>
    <string name="menu_favorite_text">Favorite</string>

    <!-- (Legacy names used in XML) -->
    <string name="Home">Home</string>
    <string name="recepies">Recipes</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="favorite">Favorite</string>

    <!-- SEARCH SCREEN -->
    <string name="ingredient_hint">Ingredient</string>
    <string name="add_button_text">Add</string>
    <string name="added_ingredients_text">Added ingredients:</string>
    <string name="search_button_text">SEARCH</string>
    <string name="max_missing_ingredients">Max allowed missing ingredients: %d</string>
    <string name="filters_button_text">Filters</string>

    <!-- FILTER DRAWER -->
    <string name="filters_title">Filters</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>

    <string name="time_title">Preparation time</string>
    <string name="time_30">Up to 30 min</string>
    <string name="time_60">Up to 60 min</string>
    <string name="time_any">Any</string>

    <string name="diet_title">Diet</string>
    <string name="diet_vege">Vegetarian</string>
    <string name="diet_vegan">Vegan</string>
    <string name="diet_meat">Meat</string>
    <string name="diet_fish">Fish</string>
    <string name="diet_any">Any</string>

    <string name="meal_title">Meal Type</string>
    <string name="meal_breakfast">Breakfast</string>
    <string name="meal_lunch">Lunch</string>
    <string name="meal_dinner">Dinner</string>
    <string name="meal_dessert">Dessert</string>
    <string name="meal_snacks">Snacks</string>

    <string name="apply_filters">Apply filters</string>
    <string name="clear_filters">Clear all</string>

    <!-- RESULTS SCREEN -->
    <string name="results_title">Search results</string>
    <string name="back_button_desc">Back</string>

    <!-- RECIPES LIST -->
    <string name="recipes_title">Recipes</string>
    <string name="loading_error">Error loading data</string>

    <!-- RECIPE DETAILS -->
    <string name="recipe_instructions_title">Instructions:</string>
    <string name="recipe_ingredients">Ingredients:</string>
    <string name="recipe_description">Description:</string>
    <string name="recipe_categories">Categories:</string>
    <string name="recipe_time">Preparation time:</string>"
    <string name="recipe_calories">Calories:</string>
    <string name="recipe_difficulty">Recipe Difficulty:</string>"
    <string name="recipe_diet">Diet:</string>
    <string name="recipe_meal">Type of meal:</string>"
    <string name="recipe_instructions">Instructions:</string>

    <string name="logged_in_thanks">Thanks for using our app!</string>
    <string name="loged_in">Logged in</string>
    <string name="not_loged_in">User not logged in</string>
    <string name="favorite_recipes_prompt">Log in to save your favorite recipes and keep them always at hand!</string>


    <!-- SETTINGS -->
    <string name="settings_title">Settings</string>
    <string name="settings_language">Language</string>
    <string name="lang_en">English</string>
    <string name="lang_pl">Polish</string>
    <string name="settings_units">Measurement Units</string>
    <string name="unit_metric">Metric (g, ml)</string>
    <string name="unit_imperial">Imperial (oz, lb)</string>
    <string name="settings_description">Adjust your recipe search preferences.</string>
    <string name="settings_time_label">Max preparation time: %d min</string>
    <string name="settings_calories">Max calories: %d kcal</string>
    <string name="apply_settings">Apply</string>
    <string name="settings_theme">Select theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="log_out">Log out</string>
    <string name="back_description">Back</string>
    <string name="liked_recipes_title">Favorite recipes</string>
    <string name="no_liked_recipes">No favorite recipes found.</string>


    <string-array name="ingredients_suggestions">
        <item>Avocado</item>
        <item>Basil</item>
        <item>Onion</item>
        <item>Puff pastry</item>
        <item>Sugar</item>
        <item>Zucchini</item>
        <item>Curry</item>
        <item>Garlic</item>
        <item>Apples</item>
        <item>Eggs</item>
        <item>Egg</item>
        <item>Kabanos sausage</item>
        <item>Couscous</item>
        <item>Dill</item>
        <item>Chicken</item>
        <item>Salmon</item>
        <item>Mayonnaise</item>
        <item>Pasta</item>
        <item>Butter</item>
        <item>Frozen vegetables mix</item>
        <item>Coconut milk</item>
        <item>Milk</item>
        <item>Mozzarella</item>
        <item>Olive oil</item>
        <item>Olives</item>
        <item>Cucumber</item>
        <item>Pepper</item>
        <item>Penne</item>
        <item>Basil pesto</item>
        <item>Black pepper</item>
        <item>Tomato</item>
        <item>Cherry tomatoes</item>
        <item>Rice</item>
        <item>Cottage cheese</item>
        <item>Feta cheese</item>
        <item>Gouda cheese</item>
        <item>Yellow cheese</item>
        <item>Salt</item>
        <item>BBQ sauce</item>
        <item>Soy sauce</item>
        <item>Spaghetti</item>
        <item>Chives</item>
        <item>Ham</item>
        <item>Cream</item>
        <item>Tortilla</item>
        <item>Canned tuna</item>
        <item>Curd cheese</item>
        <item>Water</item>
        <item>Potatoes</item>
    </string-array>

</resources>