<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:src="@drawable/logoff_bt"
            android:contentDescription="Logo" />

<!--Napisy-->

    <!-- Sign In  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/AppTextTitle_orange"
            android:text="@string/sign_in_title"
            />
        <!-- Sub t  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/AppTextNormal_grey"
            android:text="@string/sign_in_subtitle"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
             />
        <!-- Email/login  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            style="@style/AppTextNormal_orange"
            android:text="@string/email_hint"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey"
            />

        <!-- Password  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            style="@style/AppTextNormal_orange"
            android:text="@string/password_hint"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
             />
        <!-- Sign In - button   -->
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button_text"
            style="@style/AppButton_orange"
            android:layout_marginTop="24dp" />
        <!-- Continue without login - button   -->
        <Button
            android:id="@+id/btnContinueWithoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_without_login_text"
            style="@style/AppButton_orange"
            android:layout_marginTop="12dp" />

        <!-- Buttons - Forgot Password and Sign Up       -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text"
                android:textColor="@color/grey"
                 />

            <TextView
                android:id="@+id/goToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_sign_up_text"
                android:textColor="@color/orange"
                android:padding="8dp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
