<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_left"
            android:padding="8dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_description" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvLikedHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liked_recipes_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/light_grey"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="8dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateTint="@color/orange" />

        <TextView
            android:id="@+id/tvError"
            style="@style/AppTextNormal_light_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/no_liked_recipes"
            tools:text="@string/no_liked_recipes" />

    </FrameLayout>

</LinearLayout>